[gd_scene format=3 uid="uid://6kvy1x8h2euv"]

[ext_resource type="Script" uid="uid://c3f02nnxkgcje" path="res://scenes/player/player.gd" id="1_dovo2"]
[ext_resource type="PackedScene" uid="uid://uyasmgk0g04k" path="res://scenes/player/player_state.tscn" id="2_lvxji"]
[ext_resource type="Texture2D" uid="uid://dok4xc40uat7j" path="res://img/Normal.png" id="4_5gtgg"]
[ext_resource type="Texture2D" uid="uid://8k0gvy76wj04" path="res://img/Fever2.png" id="4_p47bc"]
[ext_resource type="Texture2D" uid="uid://b6lp0apvopd1b" path="res://img/FeverFire0.png" id="4_qek5x"]
[ext_resource type="Texture2D" uid="uid://cyi7smrcw8ohx" path="res://img/FeverFire1.png" id="5_5gtgg"]
[ext_resource type="Texture2D" uid="uid://cglsw2ummo8gm" path="res://img/Fever.png" id="5_75vfm"]
[ext_resource type="Texture2D" uid="uid://c0w6o0xdkikqy" path="res://img/FeverFire2.png" id="6_h17s1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5gtgg"]
radius = 26.0
height = 56.0

[sub_resource type="SpriteFrames" id="SpriteFrames_je7p5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qek5x")
}, {
"duration": 1.0,
"texture": ExtResource("5_5gtgg")
}, {
"duration": 1.0,
"texture": ExtResource("6_h17s1")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qek5x"]
radius = 78.74999
height = 242.49997

[sub_resource type="Animation" id="Animation_qek5x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5gtgg"]
resource_name = "damaged"
length = 1.1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.14999999, 0.3023257, 0.37732568, 0.45, 0.6, 0.675, 0.74767435, 0.90000004, 0.975, 1.0476744),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.3137255), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1.3528494, 1.3528494, 1.3528494, 0.3137255), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1.3528494, 1.3528494, 1.3528494, 0.3137255), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1.3528494, 1.3528494, 1.3528494, 0.3137255), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h17s1"]
_data = {
&"RESET": SubResource("Animation_qek5x"),
&"damaged": SubResource("Animation_5gtgg")
}

[node name="Player" type="Area2D" unique_id=1041717554 groups=["player"]]
script = ExtResource("1_dovo2")

[node name="PlayerState" parent="." unique_id=1205170845 instance=ExtResource("2_lvxji")]

[node name="Normal" type="Sprite2D" parent="." unique_id=1603388137]
texture = ExtResource("4_5gtgg")

[node name="NormalShape" type="CollisionShape2D" parent="." unique_id=2136243472]
position = Vector2(-7, 27)
shape = SubResource("CapsuleShape2D_5gtgg")
disabled = true

[node name="Fire" type="AnimatedSprite2D" parent="." unique_id=2068721620]
visible = false
position = Vector2(3, -47)
sprite_frames = SubResource("SpriteFrames_je7p5")

[node name="Fever1" type="Sprite2D" parent="." unique_id=759831836]
visible = false
texture = ExtResource("4_p47bc")

[node name="Fever" type="Sprite2D" parent="." unique_id=1707918965]
visible = false
texture = ExtResource("5_75vfm")

[node name="FeverShape" type="CollisionShape2D" parent="." unique_id=1319897194]
visible = false
position = Vector2(-7.9999995, 12)
scale = Vector2(0.8, 0.8)
shape = SubResource("CapsuleShape2D_qek5x")
disabled = true

[node name="SFXAudio" type="AudioStreamPlayer" parent="." unique_id=1006564273]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1244267825]
libraries/ = SubResource("AnimationLibrary_h17s1")

[connection signal="state_changed" from="PlayerState" to="." method="_on_player_state_state_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
